<resources>
    <string name="app_name">Yaqeen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="com_auth0_domain">yaqeen.eu.auth0.com</string>
    <string name="com_auth0_client_id">mZMed35pxMgKDicv5d9pIPNrTOAyBtq4</string>
    <string name="language">Language</string>
    <string name="explore_the_app">Explore the app</string>
    <string name="start_join">Start join</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="login_dialog">LOGIN</string>
    <string name="next">Next</string>
    <string name="please_select_your_user_type">Please select your user type</string>
    <string name="hey_tell_us_about_you">Hey! Tell us about you</string>
    <string name="simple_steps_to_know_more_about_you">Simple steps to know more about you.</string>
    <string name="are_you_ready">Are you ready!</string>
    <string name="back">Back</string>
    <string name="patient">Patient</string>
    <string name="volunteer_doctor">Volunteer Doctor</string>
    <string name="what_is_your_cancer_type">What is your cancer type .. ?</string>
    <string name="other">Other</string>
    <string name="question">Question .. ?</string>
    <string name="select_module_you_interest">Select Module you interest?</string>
    <string name="i_m_yet_unknown">i’m yet unknown</string>
    <string name="more_information_about_your_specialization">More information about your specialization</string>
    <string name="terms_condition"><![CDATA[Terms & condition]]></string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="activation">Activation</string>
    <string name="see_all">See all</string>
    <string name="recommended_articles">Recommended Articles</string>
    <string name="therapy_treatment">Therapy Treatment</string>
    <string name="resend_again">Resend again</string>
    <string name="university">University</string>
    <string name="degree">Degree</string>
    <string name="medical_field">Medical Field</string>
    <string name="NoInternetConnection" translatable="false">No Internet Connection</string>
    <string name="no_internet_connection">No internet connection, please check connection and try again</string>
    <string name="timeout_exceeded">Timeout exceeded while waiting for loading, make sure you are connected to the internet</string>
    <string name="error_occurred">error occurred, please try again</string>
    <string name="token_expired_title">Authorization Token Expired</string>
    <string name="token_expired_message">Your authorization token expired. You need to login again.</string>
    <string name="un_authorized" translatable="false">un authorized</string>
    <string name="missing_data">The data entered is incorrect</string>
    <string name="missing_response">The response is incorrect</string>
    <string name="activation_message">An account activation link has been sent to your email</string>
    <string name="edit">Edit</string>
    <string name="resend_activation_link">Resend Activation Link</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="create_account">Create Account</string>
    <string name="previous">Previous</string>
    <string name="search">Search</string>
    <string name="at_any_stage_of_cancer">At any stage of cancer .. ?</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="medical_id_card">Medical ID Card</string>
    <string name="select_university">Select University</string>
    <string name="you_have_logged_in_successfully">You Have Logged In Successfully</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_as_a_guest">Continue As A Guest</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="on_boarding_title">Explore trusted articles to learn more about your condition</string>
    <string name="on_boarding_message">" Discover helpful tips for recovery, Empower your healing journey with reliable information and practical advice."</string>
    <string name="sign_up">Sign up</string>
    <string name="specify_your_type_of_cancer">Specify your type of cancer.</string>
    <string name="search_type_of_cancer">Search Type of Cancer</string>
    <string name="search_type_of_interest">Search Type of Interest</string>
    <string name="specify_your_cancer_stage">Specify your cancer stage.</string>
    <string name="interest">interest?</string>
    <string name="select_all_categories_you_interest">Select all categories you interest.</string>
    <string name="finish">Finish</string>
    <string name="notifications">Notifications</string>
    <string name="register_medication">Register Medication</string>
    <string name="confirm">Confirm</string>
    <string name="amount">Amount</string>
    <string name="period">Period</string>
    <string name="title_home">Home</string>
    <string name="treatment">Treatment</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="menu">Menu</string>
    <string name="medicine">Medicine</string>
    <string name="symptoms">Symptoms</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="account_setting">Account Setting</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="close">Close</string>
    <string name="to_be_able_to_use_the_feature_you_must_log_in">To be able to use the feature, you must log in</string>
    <string name="treatment_reminder">Treatment Reminder</string>
    <string name="choose_your_treatment_categories">Choose Your Treatment Categories</string>
    <string name="medications">Medications</string>
    <string name="routine_tests">Routine Tests</string>
    <string name="medical_reminder">Medical Reminder</string>
    <string name="name_of_medication">Name of Medication</string>
    <string name="medication_type">Medication Type</string>
    <string name="name_of_the_capsule">Name of the capsule</string>
    <string name="name_of_the_medication">Name of the %s</string>
    <string name="specify_the_medication_type">Specify the Medication Type</string>
    <string name="on_boarding_title_1">Explore trusted articles to learn more about your condition</string>
    <string name="on_boarding_body_1">" Discover helpful tips for recovery, Empower your healing journey with reliable information and practical advice."</string>
    <string name="on_boarding_title_2">Logging  a medical log of your symptoms is essential.</string>
    <string name="on_boarding_body_2">"Tracking your feelings can enhance your understanding of your health condition, providing valuable insights for better management."</string>
    <string name="medication_s_track">Medication’s Track</string>
    <string name="strength">Strength</string>
    <string name="how_many_capsules_of_a_certain_strength_should_be_taken_at_once">How many capsules of a certain strength should be taken at once?</string>
    <string name="strength_question">How many %s of a certain strength should be taken at once?</string>
    <string name="unit">Unit</string>
    <string name="choose_units">Choose Units</string>
    <string name="what_time_would_you_consume_this">What time would you consume this?</string>
    <string name="start_from">Start From</string>
    <string name="time">Time</string>
    <string name="note">Note</string>
    <string name="choose_days">Choose Days</string>
    <string name="review">Review</string>
    <string name="notes">Notes</string>
    <string name="hour">Hour</string>
    <string name="days">Days</string>
    <string name="reminder">Reminder</string>
    <string name="minute">Minute</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="add">Add</string>
    <string name="history_s_medications">History’s Medications</string>
    <string name="history_s_symptoms">History’s Symptoms</string>
    <string name="history_s_routine_tests">History’s Routine Tests</string>
    <string name="history_s_medical_reminder">History’s Medical Reminder</string>
    <string name="specific_days_of_the_week">Specific Days of the week</string>
    <string name="medical_appointment">Medical Appointment</string>
    <string name="medication_added_successfully">Medication Added Successfully</string>
    <string name="medication_edited_successfully">Medication Edited Successfully</string>
    <string name="symptom_added_successfully">Symptom Added Successfully</string>
    <string name="symptom_edited_successfully">Symptom Edited Successfully</string>
    <string name="symptom_deleted_successfully">Symptom Deleted Successfully</string>
    <string name="appointment_added_successfully">Appointment Added Successfully</string>
    <string name="appointment_edited_successfully">Appointment Edited Successfully</string>
    <string name="appointment_deleted_successfully">Appointment Deleted Successfully</string>
    <string name="medication_deleted_successfully">Medication Deleted Successfully</string>
    <string name="routine_test_added_successfully">Routine Test Added Successfully</string>
    <string name="routine_test_edited_successfully">Routine Test Edited Successfully</string>
    <string name="routine_test_deleted_successfully">Routine Test Deleted Successfully</string>
    <string name="dosage">Dosage</string>
    <string name="starting_date">Starting Date</string>
    <string name="take">Take</string>
    <string name="quote_title_1">“When we long for life without difficulties, remind us that oaks grow strong in contrary winds, and diamonds are made under pressure.”</string>
    <string name="quote_title_2">“You have to be willing to give up the life you planned, and instead, greet the life that is waiting for you.”</string>
    <string name="quote_owner_1">Peter Marshall</string>
    <string name="quote_owner_2">Joseph Campbell</string>
    <string name="white">#FFFFFFFF</string>
    <string name="black">#FF000000</string>
    <string name="by">"by/ %s"</string>
    <string name="capsule">Capsule</string>
    <string name="pills">Pills</string>
    <string name="liquid">Liquid</string>
    <string name="injection">Injection</string>
    <string name="mg">Mg</string>
    <string name="mcg">Mcg</string>
    <string name="ml">Ml</string>
    <string name="percentage">%</string>
    <string name="capsule_enum" translatable="false">Capsule</string>
    <string name="pills_enum" translatable="false">Pills</string>
    <string name="liquid_enum" translatable="false">Liquid</string>
    <string name="injection_enum" translatable="false">Injection</string>
    <string name="mg_enum" translatable="false">Mg</string>
    <string name="mcg_enum" translatable="false">Mcg</string>
    <string name="ml_enum" translatable="false">Ml</string>
    <string name="percentage_enum" translatable="false">%</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tues">Tues</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="every_day">Every Day</string>
    <string name="every_8_hours">Every 8 hours</string>
    <string name="every_12_hours">Every 12 hours</string>
    <string name="day_after_day">Day after day</string>
    <string name="every_week">Every Week</string>
    <string name="every_month">Every Month</string>
    <string name="camera">Camera</string>
    <string name="my_file">My File</string>
    <string name="select_attached_files">Select attached files</string>
</resources>