<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.ui.onboarding.intro.IntroFragment">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@color/silver_medal"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="@id/iv_back"/>


        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center|start"
            android:textStyle="bold"
            android:text="@string/hey_tell_us_about_you"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"/>

        <TextView
            android:id="@+id/tv_info2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_info"
            app:layout_constraintEnd_toEndOf="@id/tv_info"
            app:layout_constraintTop_toBottomOf="@id/tv_info"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center|start"
            android:text="@string/simple_steps_to_know_more_about_you"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"/>

        <TextView
            android:id="@+id/tv_info3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_info"
            app:layout_constraintEnd_toEndOf="@id/tv_info"
            app:layout_constraintTop_toBottomOf="@id/tv_info2"
            android:gravity="center|start"
            android:textStyle="bold"
            android:text="@string/are_you_ready"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:progress="25"
            app:indicatorColor="@color/private_black"
            app:layout_constraintBottom_toTopOf="@+id/tv_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info3"
            android:layout_marginVertical="@dimen/_12sdp"
            app:layout_constraintVertical_bias="1"
            app:trackColor="@color/super_silver" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_22sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>