<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/background_dialog_view"
        android:backgroundTint="@color/white"
        tools:context=".presentation.ui.main.treatment.add.common.TimeFragment">

        <TextView
            android:id="@+id/tv_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/hour"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="@id/rv_hours"
            app:layout_constraintStart_toStartOf="@id/rv_hours"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:paddingBottom="@dimen/_96sdp"
            android:nestedScrollingEnabled="false"
            android:saveEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hour"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintVertical_bias="0"
            tools:itemCount="12"
            tools:listitem="@layout/item_hour_minute" />
        <TextView
            android:id="@+id/tv_minute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/minute"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="@id/rv_minutes"
            app:layout_constraintStart_toStartOf="@id/rv_minutes"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:saveEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginStart="@dimen/_12sdp"
            android:paddingBottom="@dimen/_96sdp"
            app:layout_constraintStart_toEndOf="@id/rv_hours"
            app:layout_constraintTop_toBottomOf="@id/tv_minute"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintVertical_bias="0"
            tools:itemCount="59"
            tools:listitem="@layout/item_hour_minute" />


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:singleSelection="true"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rv_minutes"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_am"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="@dimen/_40sdp"
                android:minWidth="@dimen/_52sdp"
                app:backgroundTint="@color/toggle_button_color_selector"
                style="@style/Widget.Material3.Button.TextButton"
                android:textColor="@color/text_black2"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="sans-serif"
                app:strokeWidth="@dimen/_1sdp"
                app:strokeColor="@color/medium_gray"
                app:cornerRadius="@dimen/_4sdp"
                android:text="@string/am"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="@dimen/_40sdp"
                android:minWidth="@dimen/_52sdp"
                app:backgroundTint="@color/toggle_button_color_selector"
                style="@style/Widget.Material3.Button.TextButton"
                android:textColor="@color/text_black2"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="sans-serif"
                app:strokeWidth="@dimen/_1sdp"
                app:strokeColor="@color/medium_gray"
                app:cornerRadius="@dimen/_4sdp"
                android:text="@string/pm"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp"
            app:iconTint="@color/medium_gray"
            app:icon="@drawable/ic_next"
            app:iconGravity="textEnd"
            app:iconPadding="@dimen/_12sdp"
            android:text="@string/next"
            android:textColor="@color/medium_gray"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="sans-serif-medium"
            app:backgroundTint="@color/light_gray"
            app:cornerRadius="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>