<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@drawable/background_bottom_sheet"
        android:backgroundTint="@color/white"
        tools:context=".presentation.ui.main.treatment.add.common.MethodAttachedFileFragment">

        <TextView
            android:id="@+id/tv_select_attached_files"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/select_attached_files"
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            app:iconPadding="@dimen/_6sdp"
            app:iconTint="@color/primary_color"
            app:icon="@drawable/ic_file"
            app:iconGravity="top"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/primary_color"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_select_attached_files"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:paddingVertical="@dimen/_20sdp"
            app:cornerRadius="@dimen/_16sdp"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
            android:textColor="@color/text_black2"
            android:text="@string/my_file"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            app:iconPadding="@dimen/_6sdp"
            app:iconTint="@color/primary_color"
            app:icon="@drawable/ic_camera"
            app:iconGravity="top"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_file"
            app:layout_constraintBottom_toBottomOf="@id/btn_file"
            app:layout_constraintTop_toTopOf="@id/btn_file"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:paddingVertical="@dimen/_20sdp"
            app:cornerRadius="@dimen/_16sdp"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
            android:textColor="@color/xx_dark_gray"
            android:text="@string/camera"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>